--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
   <head>
     <title>Tea Cozy</title>
-    <link rel="stylesheet" href="/css/style.css"> 
+    <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-
+    <main>
+      
+    </main>
   </body>
 </html>
