--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
+    <!--Header section-->
+    <header>
+      <div class="logo">
+        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Words Tea Cozy in Cursive Handwriting">
+      </div>
+      <nav>
+        <span><a href="#">Mission</a></span>
+        <span><a href="#">Featured Tea</a></span>
+        <span><a href="#">Locations</a></span>
+      </nav>
+    </header>
     <main>
-      
+
     </main>
   </body>
 </html>
