--- a/index.html
+++ b/index.html
@@ -1,23 +1,33 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Tea Cozy</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
-  <body>
-    <!--Header section-->
-    <header>
-      <div class="logo">
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="Words Tea Cozy in Cursive Handwriting">
-      </div>
-      <nav>
-        <span><a href="#">Mission</a></span>
-        <span><a href="#">Featured Tea</a></span>
-        <span><a href="#">Locations</a></span>
-      </nav>
-    </header>
-    <main>
 
-    </main>
-  </body>
+<head>
+  <title>Tea Cozy</title>
+  <link rel="stylesheet" href="/css/style.css">
+</head>
+
+<body>
+  <!--Header section-->
+  <header>
+    <div class="logo">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png"
+        alt="Words Tea Cozy in Cursive Handwriting">
+    </div>
+    <nav>
+      <span><a href="#">Mission</a></span>
+      <span><a href="#">Featured Tea</a></span>
+      <span><a href="#">Locations</a></span>
+    </nav>
+  </header>
+  <!--Main Content-->
+  <main>
+    <section class="mission">
+      <div class="mission-bar">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </section>
+  </main>
+</body>
+
 </html>
