added tea section and teabar div

--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
   </header>
   <!--Main Content-->
   <main>
+    <!-- Mission Bar -->
     <section class="mission">
       <div class="mission-bar">
         <h2>Our Mission</h2>
         <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+    </section>
+    <!--Tea of the month  -->
+    <section class="tea">
+      <div class="teabar">
+        <span>Tea of the Month</span>
+        <p>What's Steeping at The Tea Cozy?</p>
       </div>
     </section>
   </main>
