--- a/index.html
+++ b/index.html
@@ -29,10 +29,32 @@
       </div>
     </section>
     <!--Tea of the month  -->
-    <section class="tea">
-      <div class="teabar">
-        <span>Tea of the Month</span>
-        <p>What's Steeping at The Tea Cozy?</p>
+    <section class="menu">
+      <div class="row">
+        <div class="teabar">
+          <span>Tea of the Month</span>
+          <p>What's Steeping at The Tea Cozy?</p>
+        </div>
+        <div class="tea">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry blitz served in a grey cup">
+          <span>Fall Berry Blitz Tea</span>
+        </div>
+        <div class="tea">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced rum tea aluminum tea bags in a wooden box with cation reading, It Pays to Buy Good Tea">
+          <span>Spiced Rum Tea</span>
+        </div>
+        <div class="tea">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="dark colored donut served on a white, square plate">
+          <span>Seasonal Donuts</span>
+        </div>
+        <div class="tea">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea served in a cup">
+          <span>Myrtle Ave Tea</span>
+        </div>
+        <div class="tea">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea served in a cup over a blue saucer and with sugar on the side">
+          <span>Bedford Bizarre Tea</span>
+        </div>
       </div>
     </section>
   </main>
