added footer with company info section and copyright section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </div>
       </div>
     </section>
+    <!--Locations  -->
     <section class="locations">
       <div class="row">
         <div class="text-content">
@@ -83,6 +84,16 @@
       </div>
     </section>
   </main>
+  <footer>
+    <section class="info">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </section>
+    <section class="copyright">
+      <p>copyright The Tea Cozy 2017</p>
+    </section>
+  </footer>
 </body>
 
 </html>
