--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>Tea Cozy</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="C:\Projects\teacozy\css\style.css">
 </head>
 
 <body>
@@ -37,23 +37,23 @@
         </div>
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry blitz served in a grey cup">
-          <span>Fall Berry Blitz Tea</span>
+          <p>Fall Berry Blitz Tea</p>
         </div>
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="Spiced rum tea aluminum tea bags in a wooden box with cation reading, It Pays to Buy Good Tea">
-          <span>Spiced Rum Tea</span>
+          <p>Spiced Rum Tea</p>
         </div>
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="dark colored donut served on a white, square plate">
-          <span>Seasonal Donuts</span>
+          <p>Seasonal Donuts</p>
         </div>
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="Myrtle Ave Tea served in a cup">
-          <span>Myrtle Ave Tea</span>
+          <p>Myrtle Ave Tea</p>
         </div>
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="Bedford Bizarre Tea served in a cup over a blue saucer and with sugar on the side">
-          <span>Bedford Bizarre Tea</span>
+          <p>Bedford Bizarre Tea</p>
         </div>
       </div>
     </section>
@@ -95,5 +95,4 @@
     </section>
   </footer>
 </body>
-
 </html>
