--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </section>
     <!--Tea of the month  -->
     <section class="menu">
-      <div class="row">
-        <div class="teabar">
-          <span>Tea of the Month</span>
-          <p>What's Steeping at The Tea Cozy?</p>
-        </div>
+      <div class="teabar">
+        <h2>Tea of the Month</h2>
+        <span>What's Steeping at The Tea Cozy?</span>
+      </div>
+      <div class="rowtea">
         <div class="tea">
           <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="Berry blitz served in a grey cup">
           <p>Fall Berry Blitz Tea</p>
@@ -59,23 +59,21 @@
     </section>
     <!--Locations  -->
     <section class="locations">
+          <h2>Locations</h2>
       <div class="row">
-        <div class="text-content">
-          <span>Locations</span>
-        </div>
-        <div class="downtown">
+        <div class="location">
           <h3>Downtown</h3>
           <p>384 West 4th St</p>
           <p>Suite 108</p>
           <p>Portland, Maine</p>
         </div>
-        <div class="bayside">
+        <div class="location">
           <h3>East Bayside</h3>
           <p>3433 Phisherman's Avenue</p>
           <p>(Northwest Corner)</p>
           <p>Portland, Maine</p>
         </div>
-        <div class="oakdale">
+        <div class="location">
           <h3>Oakdale</h3>
           <p>515 Crescent Avenue</p>
           <p>Second Floor</p>
@@ -91,7 +89,7 @@
       <h5>917-555-8904</h5>
     </section>
     <section class="copyright">
-      <p>copyright The Tea Cozy 2017</p>
+      <h5>copyright The Tea Cozy 2017</h5>
     </section>
   </footer>
 </body>
